OPH-1352: Lokalisoi "Lataa tekstiraportti"

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -17,7 +17,7 @@
           <form action="api/kaiku" method="post">
             <input type="hidden" name="data" value="{{tekstiRaportti}}">
             <input type="hidden" name="filename" value="raportti.txt">
-            <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-download-alt"></span> Lataa tekstiraportti</button>
+            <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
           </form>
         </div>
       </div>
