OPH-1395: Muuta latauslinkki tekstikentäksi
Linkki valitaan automaattisesti klikatessa.

--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -5,7 +5,7 @@
 <div class="modal-body">
   <p translate="tallennus.teksti"></p>
 
-  <strong>{{ linkki }}</strong>
+  <input class="form-control" type="text" value="{{linkki}}" readonly click-to-select>
 </div>
 
 <div class="modal-footer">
