OPH-1396: Korjaa kaavion korkeus

--- a/app/frontend/src/template/direktiivit/kaavio.html
+++ b/app/frontend/src/template/direktiivit/kaavio.html
@@ -1,5 +1,5 @@
 <svg class="kaavio"
-  ng-attr-width="{{viivastonLeveys() + 50}}" ng-attr-height="{{asetukset.palkinMaksimiPituus + 120}}">
+  ng-attr-width="{{viivastonLeveys() + 50}}" ng-attr-height="{{viivastonKorkeus() + 50}}">
 
   <g transform="translate(50, 40)">
     <line ng-repeat="viiva in viivat"
