--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -6,6 +6,8 @@
   <p translate="tallennus.teksti"></p>
 
   <input class="form-control" type="text" value="{{linkki}}" readonly click-to-select>
+
+  <p><span translate="tallennus.kopioi_ohje"></span> <kbd><kbd>ctrl</kbd> + <kbd>c</kbd></kbd></p>
 </div>
 
 <div class="modal-footer">
