OPH-1352: label -> button

--- a/app/frontend/src/sass/yhteiset/_theme.scss
+++ b/app/frontend/src/sass/yhteiset/_theme.scss
@@ -13,3 +13,7 @@ $darkest-primary: #1c4911;
 $disabled-primary-color: #58804d;
 
 $primary-action-text: white;
+
+*{
+  outline-color: #F7941E !important;
+}
