--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -1,4 +1,8 @@
-<div class="alert alert-info" ng-if="ladattu" translate="osien-valinta.arvio_ladattu" translate-values="{luotuaika: (ladattu | date:'dd.MM.yyyy HH:mm:ss')}"></div>
+<div class="alert alert-warning alert-dismissible" role="alert" ng-if="ladattu">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <p class="lead" translate="osien-valinta.arvio_ladattu_otsikko"></p>
+  <p translate="osien-valinta.arvio_ladattu" translate-values="{luotuaika: (ladattu | date:'dd.MM.yyyy HH:mm:ss')}"></p>
+</div>
 
 <polku></polku>
 
