--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -16,16 +16,24 @@
 
     <eperusteet-linkki kieli="{{kieli}}" eperustesivu="rakenne" eperustetunnus="{{tutkinto.peruste_eperustetunnus}}" eperustetyyppi="{{tutkinto.peruste_tyyppi}}" tutkintotunnus="{{tutkinto.tutkintotunnus}}" tutkintonimi="{{ tutkinto | lokalisoiKentta:'nimi' }}"></eperusteet-linkki>
 
-    <h3 ng-if="(tutkinnonosat | filter: {pakollinen: true}).length" translate="osien-valinta.pakolliset_osat"></h3>
-    <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: true}" class="checkbox">
+    <h3 ng-if="(tutkinnonosat | filter: {tyyppi: 'pakollinen'}).length" translate="osien-valinta.pakolliset_osat"></h3>
+    <div ng-repeat="osa in tutkinnonosat | filter: {tyyppi: 'pakollinen'}" class="checkbox">
       <label>
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
     </div>
 
-    <h3 ng-if="(tutkinnonosat | filter: {pakollinen: false}).length" translate="osien-valinta.valinnaiset_osat"></h3>
-    <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: false}" class="checkbox">
+    <h3 ng-if="(tutkinnonosat | filter: {tyyppi: 'valinnainen'}).length" translate="osien-valinta.valinnaiset_osat"></h3>
+    <div ng-repeat="osa in tutkinnonosat | filter: {tyyppi: 'valinnainen'}" class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
+        {{ osa | lokalisoiKentta:'nimi' }}
+      </label>
+    </div>
+
+    <h3 ng-if="(tutkinnonosat | filter: {tyyppi: 'yhteinen'}).length" translate="osien-valinta.yhteiset_osat"></h3>
+    <div ng-repeat="osa in tutkinnonosat | filter: {tyyppi: 'yhteinen'}" class="checkbox">
       <label>
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
