--- a/app/frontend/src/sass/yhteiset/_animate.scss
+++ b/app/frontend/src/sass/yhteiset/_animate.scss
@@ -1,10 +1,11 @@
 /* Angular animate */
 .reveal-animation.ng-enter,
-.reveal-animation.ng-leave {
+.reveal-animation.ng-leave,
+.tablehead-animate{
   -webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
   -moz-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
   -o-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
-  transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000); /* ease-in-out */
+  transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
 
 .reveal-animation.ng-leave {
@@ -20,7 +21,6 @@
 .reveal-animation.ng-leave.ng-leave-active {
   height: 0px;
 }
-
 
 .view-animate.ng-leave {
   -webkit-transition: all 0ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
