--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -8,20 +8,21 @@
   </div>
   <div class="panel-body">
     <div class="row">
-      <div class="pull-right">
-        <div class="btn-group" role="group">
-          <button class="btn btn-success" ng-model="valittuRaportti" btn-radio="'raportti'">{{ 'raportti.tyyppi_raportti' | translate }}</button>
-          <button class="btn btn-success" ng-model="valittuRaportti" btn-radio="'tekstiraportti'">{{ 'raportti.tyyppi_tekstiraportti' | translate }}</button>
-        </div>
-        <div class="btn-group">
-          <form action="api/kaiku" method="post">
-            <input type="hidden" name="data" value="{{tekstiRaportti}}">
-            <input type="hidden" name="filename" value="raportti.txt">
-            <button class="btn btn-default" type="submit" ng-click="estaPoistumisvaroitus()"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
-          </form>
+      <div class="col-md-12">
+        <div class="pull-right">
+          <div class="btn-group" role="group">
+            <button class="btn btn-success" ng-model="valittuRaportti" btn-radio="'raportti'">{{ 'raportti.tyyppi_raportti' | translate }}</button>
+            <button class="btn btn-success" ng-model="valittuRaportti" btn-radio="'tekstiraportti'">{{ 'raportti.tyyppi_tekstiraportti' | translate }}</button>
+          </div>
+          <div class="btn-group">
+            <form action="api/kaiku" method="post">
+              <input type="hidden" name="data" value="{{tekstiRaportti}}">
+              <input type="hidden" name="filename" value="raportti.txt">
+              <button class="btn btn-default" type="submit" ng-click="estaPoistumisvaroitus()"><span class="glyphicon glyphicon-download-alt"></span> <span translate="raportti.lataa_tekstiraportti"></span></button>
+            </form>
+          </div>
         </div>
       </div>
-
     </div>
     <div ng-if="valittuRaportti == 'tekstiraportti'">
       <h2 translate="raportti.tyyppi_tekstiraportti"></h2>
@@ -32,48 +33,50 @@
         </div>
       </div>
     </div>
+
     <div ng-if="valittuRaportti == 'raportti'">
+      <div>{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}</div>
 
-    <div>{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}</div>
+      <div class="col-md-12">
+        <kaavio jakauma="jakauma"></kaavio>
+      </div>
 
-    <kaavio jakauma="jakauma"></kaavio>
+      <div class="checkbox pull-right">
+        <label>
+          <input type="checkbox" ng-model="naytaKommentit">
+          <span translate="raportti.nayta_kommentit"></span>
+        </label>
+      </div>
 
-    <div>
-      <label>
-        <input type="checkbox" ng-model="naytaKommentit">
-        <span translate="raportti.nayta_kommentit"></span>
-      </label>
-    </div>
+      <section class="tutkinnonosa" ng-repeat="tutkinnonosa in raportti.tutkinnonosat">
+        <h2>{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</h2>
 
-    <section class="tutkinnonosa" ng-repeat="tutkinnonosa in raportti.tutkinnonosat">
-      <h2>{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</h2>
+        <section class="kohdealue" ng-repeat="kohdealue in tutkinnonosa.kohdealueet">
+          <h3>{{ kohdealue | lokalisoiKentta:'nimi' }}</h3>
 
-      <section class="kohdealue" ng-repeat="kohdealue in tutkinnonosa.kohdealueet">
-        <h3>{{ kohdealue | lokalisoiKentta:'nimi' }}</h3>
-
-        <table class="raportti table table-striped table-condensed">
-          <thead>
-            <tr>
-              <th translate="raportti.ammattitaidon_kuvaus"></th>
-              <th translate="raportti.arvio"></th>
-              <th translate="raportti.kommentti"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="kuvaus in kohdealue.kuvaukset">
-              <td>{{ kuvaus | lokalisoiKentta:'nimi' }}</td>
-              <td>{{ kuvaus.arvio.arvio }}</td>
-              <td>
-                <button class="btn btn-default" popover="{{ kuvaus.arvio.vapaateksti }}" popover-placement="left" popover-trigger="mouseenter" ng-if="!naytaKommentit && kuvaus.arvio.vapaateksti">
-                  <span class="glyphicon glyphicon-comment"></span>
-                </button>
-                <span ng-if="naytaKommentit" ng-bind="kuvaus.arvio.vapaateksti"></span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+          <table class="raportti table table-striped table-condensed">
+            <thead>
+              <tr>
+                <th translate="raportti.ammattitaidon_kuvaus" ng-class="{'col-md-5': naytaKommentit, 'col-md-10': !naytaKommentit}" class="tablehead-animate"></th>
+                <th translate="raportti.arvio" ng-class="{'col-md-1': naytaKommentit, 'col-md-1': !naytaKommentit}" class="tablehead-animate"></th>
+                <th translate="raportti.kommentti" ng-class="{'col-md-6': naytaKommentit, 'col-md-1': !naytaKommentit}" class="tablehead-animate"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="kuvaus in kohdealue.kuvaukset">
+                <td>{{ kuvaus | lokalisoiKentta:'nimi' }}</td>
+                <td><span class="arvio" ng-if="kuvaus.arvio.arvio">{{ kuvaus.arvio.arvio }}</span></td>
+                <td ng-class="{'text-center': !naytaKommentit, 'text-italic': naytaKommentit}">
+                  <a popover="{{ kuvaus.arvio.vapaateksti }}" popover-placement="left" popover-trigger="click" ng-if="!naytaKommentit && kuvaus.arvio.vapaateksti">
+                    <span class="glyphicon glyphicon-comment"></span>
+                  </a>
+                  <em ng-if="naytaKommentit" ng-bind="kuvaus.arvio.vapaateksti"></em>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
       </section>
-    </section>
     </div>
   </div>
   <div class="panel-footer">
