--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -37,6 +37,19 @@
     <div ng-if="valittuRaportti == 'raportti'">
       <div>{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}</div>
 
+      <h3 translate="raportti.vastausprosentit"></h3>
+      <div class="row" ng-repeat="tutkinnonosa in raportti.tutkinnonosat">
+        <div class="col-md-2 text-right">{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</div>
+        <div class="col-md-4">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="{{ tutkinnonosa.arvioituna }}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: {{ tutkinnonosa.arvioituna }}%;">{{ tutkinnonosa.arvioituna }}%</div>
+          </div>
+        </div>
+        <div class="col-md-2">
+          {{ tutkinnonosa.arvioita }} / {{ tutkinnonosa.arvioitavia }}
+        </div>
+      </div>
+
       <div class="col-md-12">
         <kaavio jakauma="jakauma"></kaavio>
       </div>
