OPH-1411: Uusi esittelyteksti etusivulle

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -1,6 +1,6 @@
 <ohje tunniste="etusivu"></ohje>
 
-<div translate="etusivu.teksti"></div>
+<div translate="etusivu.teksti" style="white-space: pre-wrap"></div>
 <br />
 <polku></polku>
 
