--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -8,6 +8,8 @@
   <input class="form-control" type="text" value="{{linkki}}" readonly click-to-select>
 
   <p><span translate="tallennus.kopioi_ohje"></span> <kbd><kbd>ctrl</kbd> + <kbd>c</kbd></kbd></p>
+
+  <p><a href="mailto:?subject=osaan.fi&body={{linkki}}" translate="tallennus.laheta_sahkopostilla"></a></p>
 </div>
 
 <div class="modal-footer">
