OPH-1423: Käytä huomautukset-direktiiviä
ladattu-parametria ei enää välitetä osien-valinta -sivulle jolloin
käyttäjä ei hämäänny ajattelemaan että osoitteen kopioimalla voisi
ladata arvion.

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -1,8 +1,4 @@
-<div class="alert alert-warning alert-dismissible" role="alert" ng-if="ladattu">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <p class="lead" translate="osien-valinta.arvio_ladattu_otsikko"></p>
-  <p translate="osien-valinta.arvio_ladattu" translate-values="{luotuaika: (ladattu | date:'dd.MM.yyyy HH:mm:ss')}"></p>
-</div>
+<huomautukset></huomautukset>
 
 <polku></polku>
 
