OPH-1414: Korjaa ruotsinkielinen opintopolku-linkki

--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -7,7 +7,7 @@
     <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
     {{ 'tutkinto.nayttotutkintojenjarjestajat_linkki' | translate }}
   </a>
-  <a ng-if="eperustetyyppi !== 'naytto'" href="https://opintopolku.fi/app/#!/haku/*?page=1&articlePage=1&organisationPage=1&langCleared&itemsPerPage=25&sortCriteria=0&educationCodeFilter={{tutkintonimi}}&tab=los" target="blank">
+  <a ng-if="eperustetyyppi !== 'naytto'" ng-href="{{opintopolkuUrl}}" target="blank">
     <span class="glyphicon bitmap icon-opintopolku" aria-hidden="true"></span>
     {{ 'tutkinto.koulutustarjonta_linkki' | translate }}
   </a>
