--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -1,14 +1,23 @@
 <div class="eperusteet">
-  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/{{eperustesivu}}" target="blank">
-    <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
-    {{ 'tutkinto.eperusteet_linkki' | translate }}
-  </a>
-  <a ng-if="eperustetyyppi!='ops'" href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
-    <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
-    {{ 'tutkinto.nayttotutkinnonjarjestajat_linkki' | translate }}
-  </a>
-  <a ng-if="eperustetyyppi !== 'naytto'" ng-href="{{opintopolkuUrl}}" target="blank">
-    <span class="glyphicon bitmap icon-opintopolku" aria-hidden="true"></span>
-    {{ 'tutkinto.koulutustarjonta_linkki' | translate }}
-  </a>
+  <div>
+    <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/{{eperustesivu}}" target="blank">
+      <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
+      {{ 'tutkinto.eperusteet_linkki' | translate }}
+    </a>
+    <span class="glyphicon glyphicon-question-sign" popover="{{ 'tutkinto.eperusteet_linkki_info' | translate }}" popover-trigger="mouseenter"></span>
+  </div>
+  <div ng-if="eperustetyyppi!='ops'">
+    <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
+      <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
+      {{ 'tutkinto.nayttotutkinnonjarjestajat_linkki' | translate }}
+    </a>
+    <span class="glyphicon glyphicon-question-sign" popover="{{ 'tutkinto.nayttotutkinnonjarjestajat_linkki_info' | translate }}" popover-trigger="mouseenter"></span>
+  </div>
+  <div ng-if="eperustetyyppi !== 'naytto'" >
+    <a ng-href="{{opintopolkuUrl}}" target="blank">
+      <span class="glyphicon bitmap icon-opintopolku" aria-hidden="true"></span>
+      {{ 'tutkinto.koulutustarjonta_linkki' | translate }}
+    </a>
+    <span class="glyphicon glyphicon-question-sign" popover="{{ 'tutkinto.koulutustarjonta_linkki_info' | translate }}" popover-trigger="mouseenter"></span>
+  </div>
 </div>
