OPH-1431: Uusi arvio tallennettu -infoteksti

--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal-body">
-  <p translate="tallennus.teksti"></p>
+  <p translate="tallennus.teksti" style="white-space: pre-wrap"></p>
 
   <input class="form-control" type="text" value="{{linkki}}" readonly click-to-select>
 
