OPH-1435: Parempi fontti kaavioon

--- a/app/frontend/src/template/direktiivit/kaavio.html
+++ b/app/frontend/src/template/direktiivit/kaavio.html
@@ -41,7 +41,7 @@
       ng-attr-height="{{asetukset.palkinLeveys}}"
       ng-attr-y="{{paikkaPalkistonSuhteen($index, 0, 0.5)}}"
       ng-attr-x="0" />
-    <g stroke="black" ng-repeat-end>
+    <g stroke="black" ng-repeat-end style="font-family: 'Open Sans Condensed', Arial, sans-serif; font-size: 1.3em">
       <text
         class="kaavio-palkin-otsikko"
         ng-attr-y="{{paikkaPalkistonSuhteen($index, 0, 1)}}"
