--- a/app/frontend/src/sass/partials/_typography.scss
+++ b/app/frontend/src/sass/partials/_typography.scss
@@ -3,6 +3,15 @@ h1 {
   font-size: 2.70em;
   color: $primary-color;
   margin: 0;
+  &.logo{
+    line-height: .8em;
+    .jagkan{
+      font-size: .6em;
+      color: $darker-gray;
+      font-weight: normal;
+      padding-left: .2em;
+    }
+  }
 }
 
 .small-type {
