--- a/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
+++ b/app/frontend/src/template/direktiivit/tutkinnonosa-tilastot.html
@@ -1,4 +1,4 @@
-<div class="row"><div class="col-md-12"><strong>{{ otsikko }} (valittu {{ suodatetutTutkinnonosat.length }}/{{ tutkinnonosiaTyypilla }})</strong></div></div>
+<div class="row"><div class="col-md-12"><strong>{{ otsikko }} ({{ 'raportti.valittu' | translate }} {{ suodatetutTutkinnonosat.length }}/{{ tutkinnonosiaTyypilla }})</strong></div></div>
 <div ng-repeat="tutkinnonosa in suodatetutTutkinnonosat" style="margin-left: 2em">
   <div class="row"><div class="col-md-6"><span>{{ tutkinnonosa | lokalisoiKentta:'nimi' }}</span></div></div>
   <div class="row">
