--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -33,13 +33,13 @@
     <div class="row">
       <div class="col-md-12">
         <button class="btn btn-primary pull-right" ng-click="eteenpain()" ng-disabled="seuraavaTutkinnonosa() === undefined" role="button">
-          {{ 'tutkinto_osa.arvioi' | translate}} &nbsp;
+          {{ 'yleiset.arvioi_osaaminen' | translate}} &nbsp;
           <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
         </button>
 
         <a class="btn btn-primary pull-left" href="#/" role="button">
           <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
-          {{ 'tutkinto_osa.valitse_tutkinto' | translate}}
+          {{ 'yleiset.valitse_tutkinto' | translate}}
         </a>
       </div>
     </div>
