OPH-1465: Poista arviot -> tyhjennä arviot

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -21,10 +21,10 @@
     <div class="alert alert-warning" role="alert" ng-if="onkoArvioita()">
       <p class="lead">{{ 'osien-valinta.arvioita_on' | translate}}</p>
       <p>
-        {{ 'osien-valinta.poisto-teksti' | translate}}  &nbsp;&nbsp;
+        {{ 'osien-valinta.tyhjenna-teksti' | translate}}  &nbsp;&nbsp;
         <a class="btn btn-sm btn-danger" ng-click="poistaArviot()">
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-          {{ 'osien-valinta.poista_arviot' | translate}}
+          {{ 'osien-valinta.tyhjenna_arviot' | translate}}
         </a>
       </p>
     </div>
